static/css/layout.css
html, body, .is-fullsize {
    width: 100%;
    height: 100%;
}
.with-background {
    background: linear-gradient(
        rgba(0, 0, 0, 0.5), 
        rgba(0, 0, 0, 0.5)),
        url('/img/background.jpg');
    background-size: cover;
    background-position: center;
}
.with-error-background {
    background: linear-gradient(
        rgba(255, 0, 0, 0.5), 
        rgba(255, 0, 0, 0.5)),
        url('/img/background.jpg');
    background-size: cover;
    background-position: center;
}
.is-logo-img {
    width: 32px;
}
.with-top-padding {
    padding-top: 32px;
}
.is-shadowed {
    box-shadow: 1px 2px black;
}
.has-no-overflow {
    overflow-y: hidden;
}
.right-card {
    overflow-y: scroll;
}

